# ML-Projects

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Regression/: LinearRegression.ipynb  pytorch_linear_regression.py  tf2_linear_regression.ipynb  tf_linear_regression.ipynb  tf_logistic_regression.ipynb
fcNN/: dl_utils.py  keras_fcNN.py  pytorch_fcNN.ipynb  tf_fcNN.ipynb  tf_fcNN.py
fcNN/logs/graphs/: events.out.tfevents.1598961494.desktop
fcNN/logs/test/: events.out.tfevents.1598961511.desktop
fcNN/logs/train/: events.out.tfevents.1598961494.desktop
nn/: datasets.py  plot_utils.py  pytorch_fcNN.ipynb
regression/: LinearRegression.ipynb  dl_utils.py  load_mnist.py  pytorch_linear_regression.ipynb  pytorch_logistic_regression.ipynb  tf_linear_regression.ipynb  tf_logistic_regression.ipynb
unsplash-dataset/: DOCS.md  README.md
unsplash-dataset/data/: dataset.csv  test.csv  train.csv  valid.csv
unsplash-dataset/source/: dataset_exploration.ipynb
unsplash-dataset/source/utils/: download.py  orientation.py
